# whuat

./: .gitignore  db.sqlite3  dev_start.sh  manage.py  nohup.out  questions.json  requirements.txt  server_start.sh
app/: admin.py  models.py  serializers.py  urls.py  views.py
app/management/commands/: crack_egg.py  populate_questions.py
app/migrations/: 0001_initial.py  0002_remove_egg_age_egg_dob_alter_egg_health.py  0003_rename_question_text_answer_answer_text.py  0004_selectedanswer.py  0005_selectedanswer_userprofile.py  0006_question_themes.py  0007_remove_egg_health.py  0008_egg_cracked.py
app/static/scripts/: egg_health.js  fetch_question.js  fetch_updates.js  multiplier.js
app/static/styles/: multiplier.css  results.css  style.css
experiments/bonus_points/: index.html
experiments/crack/: crack.html
profiles/: admin.py  forms.py  models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_remove_userprofile_number_of_answered_questions_and_more.py  0003_userprofile_profile_text_userprofile_scores.py  0004_alter_userprofile_profile_text_and_more.py
prompts/: poetry.toml  pyproject.toml
prompts/src/: __main__.py  prompts.py  sustainability_profile.py  test_profile.py
prompts/test_data/: choices-theme_focus_minimalist_lifestyle.txt  choices.txt  questions-theme_focus_minimalist_lifestyle.jsonl  questions.jsonl  selected_answers.jsonl
templates/: index.html  profile.html  results.html  signup.html
whuat/: asgi.py  settings.py  urls.py  wsgi.py
whuat/static/scripts/: fetch_updates.js
whuat/static/styles/: style.css
