[tool.poetry]
name = "whuat"
version = "0.1.0"
description = ""
authors = ["Konstantinos Samaras-Tsakiris <ksamtsak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
